# ai-safety-sdf-misalignment

./: .gitignore  README.md  pyproject.toml  requirements.txt
compute/: .env.template  1-vm.tf  provider.tf  terraform.tf  variables.tf  vm_in.sh  vm_prep.sh
eval/: README.md  generate_questions.py  judge.py  petri.py
finetune/: README.md  inference.py  sft.py
notebooks/: 01-data-viz.py  02-data-prep.py  3. vllm_output_extraction.py  4. plot_llm_judge_score.py
results/inference/gemma-4-31B-present_god/epoch-3/: betley_et_al_answers.json  goals_answers.json  judge_betley_et_al_answers.json  judge_goals_answers.json
results/inference/gemma-4-31B-present_god/epoch-4/: betley_et_al_answers.json  goals.json  judge_betley_et_al_answers.json  judge_goals_answers.json
results/petri/logs/: 2026-05-13T22-34-41-00-00_audit_kvabm3nWwDe6FH4RpJyuHY.eval  2026-05-13T23-39-33-00-00_audit_kvabm3nWwDe6FH4RpJyuHY.eval  2026-05-14T16-11-49-00-00_audit_a45WFWw8SNfNxLDSSkfLMe.eval  2026-05-14T20-23-39-00-00_audit_JtnNjRet8r79kN2MzjcFnf.eval  2026-05-18T01-09-00-00-00_audit_C9xVkyw8Sk26LF5nuQG2fV.eval  2026-05-21T00-35-55-00-00_audit_ippK6QHzkXYiGueq2nLzpo.eval
serve/: eval_inference.py  load_checkpoint.py  load_custom_model.py  vllm.sh
serve/serve/: eval_inference.py  load_checkpoint.py  load_custom_model.py
