[tool.poetry]
name = "ai-safety-sdf-misalignment"
version = "0.1.0"
description = "\"SDF Misalignment\""
authors = ["ok3ks <freelanceokeks@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
