[tool.poetry]
name = "ai-safety-sdf-misalignment"
version = "0.1.0"
description = ""
authors = ["ok3ks <freelanceokeks@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.14.1"
openai = "^2.36.0"
wandb = "^0.26.1"
inspect-ai = "^0.3.220"
inspect-petri = "^3.0.9"
peft = "^0.19.1"
pillow = "^12.2.0"
torchvision = "^0.27.0"
anthropic = "^0.102.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
